globus-gssapi-gsi (13.5-2+gt6.@distro@) @distro@; urgency=low

  * Fix dbg package

 -- Globus Toolkit <support@globus.org>  Tue, 20 Feb 2018 16:18:03 -0500

globus-gssapi-gsi (13.5-1+gt6.@distro@) @distro@; urgency=low

  * don't check uid on win

 -- Globus Toolkit <support@globus.org>  Thu, 25 Jan 2018 12:41:10 -0600

globus-gssapi-gsi (13.4-1+gt6.@distro@) @distro@; urgency=low

  * Improve vhost support

 -- Globus Toolkit <support@globus.org>  Wed, 01 Nov 2017 20:27:40 +0000

globus-gssapi-gsi (13.3-1+gt6.@distro@) @distro@; urgency=low

  * Allow configuration of non-root user to own credentials for root services

 -- Globus Toolkit <support@globus.org>  Mon, 30 Oct 2017 13:46:22 +0000

globus-gssapi-gsi (13.2-1+gt6.@distro@) @distro@; urgency=low

  * Fix make clean rule (pull #114)
  * Fix alpn mismatch test

 -- Globus Toolkit <support@globus.org>  Thu, 28 Sep 2017 08:52:47 -0400

globus-gssapi-gsi (13.1-1+gt6.@distro@) @distro@; urgency=low

  * use X509_VHOST_CRED_DIR if set when accepting

 -- Globus Toolkit <support@globus.org>  Tue, 12 Sep 2017 16:18:13 -0400

globus-gssapi-gsi (13.0-1+gt6.@distro@) @distro@; urgency=low

  * Add SNI vhost cred dir support
  * Add optional ALPN processing

 -- Globus Toolkit <support@globus.org>  Tue, 05 Sep 2017 14:38:00 -0400

globus-gssapi-gsi (12.17-1+gt6.@distro@) @distro@; urgency=low

  * Fix indicate_mechs_test when using openssl v1.1.0
  * update to debhelper 9

 -- Globus Toolkit <support@globus.org>  Wed, 21 Jun 2017 13:21:04 -0400

globus-gssapi-gsi (12.16-1+gt6.@distro@) @distro@; urgency=low

  * Address test issues: fix .srl dependency, reuse credential
    in thread test

 -- Globus Toolkit <support@globus.org>  Thu, 27 Apr 2017 08:43:15 -0400

globus-gssapi-gsi (12.15-2+gt6.@distro@) @distro@; urgency=low

  * Remove legacy SSLv3 support

 -- Globus Toolkit <support@globus.org>  Fri, 21 Apr 2017 14:23:04 -0400

globus-gssapi-gsi (12.14-1+gt6.@distro@) @distro@; urgency=low
