@@ -1,3 +1,9 @@
+globus-gssapi-gsi (13.6-1+gt6.@distro@) @distro@; urgency=low
+
+  * enable ECDH ciphers for openssl < 1.1.0
+
+ -- Globus Toolkit <support@globus.org>  Thu, 31 May 2018 09:56:47 -0500
+
 globus-gssapi-gsi (13.5-2+gt6.@distro@) @distro@; urgency=low
 
   * Fix dbg package
